Added image and modify tests

--- a/.env.example
+++ b/.env.example
@@ -60,3 +60,6 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 API_DAYS_EXPIRE_TOKEN=30
 API_MAX_ATTEMPTS=3
 API_SECONDS_RESET_ATTEMPTS=60
+
+#size in Kb
+MAX_FILE_SIZE=500
